Added functional AI

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body ng-app ng-controller="thisController">
 	    <div class="wrapper">
-	    	<div>
+	    	<div ng-show="!is1Player">
 		    	<div id="turn" class="inlinify verticalify">
 		    		<h3 id="turn-header">Turn: </h3>
 		    	</div>
